stop side scrollbar from scrolling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3537,7 +3537,7 @@ input, select, textarea {
 		height: 100vh;
 		left: 0;
 		overflow-x: hidden;
-		overflow-y: auto;
+		overflow-y: hidden; /* stop scrollbar from sidebar */
 		position: fixed;
 		text-align: right;
 		top: 0;
